style(listItem): fix text vertical alignment

--- a/client/components/ui/list/items/listItem.module.scss
+++ b/client/components/ui/list/items/listItem.module.scss
@@ -2,6 +2,7 @@
 
 .item {
   width: 100%;
+  height: 100%;
   background-color: colors.$bg-card;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -16,6 +17,10 @@
   > * {
     width: 100%;
     text-align: center;
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__buttons {
